# ASN_RAG

./: .gitignore  LICENSE  README.md
evaluation_pipeline/: pyproject.toml
evaluation_pipeline/deploy_model/: wandb_to_hub.py
evaluation_pipeline/evaluation_pipeline/: testset_generation.py
evaluation_pipeline/evaluation_pipeline/cache/french/: answer_formulate.json  compress_question.json  conditional_question.json  evolution_elimination.json  filter_question.json  find_relevant_context.json  keyphrase_extraction.json  multi_context_question.json  reasoning_question.json  score_context.json  seed_question.json
inference_pipeline/: pyproject.toml
inference_pipeline/inference_pipeline/: main.py  rag.py
inference_pipeline/inference_pipeline/lm/: lm.py
inference_pipeline/inference_pipeline/templates/: index.html
inference_pipeline/inference_pipeline/utils/: embeddings.py  hf_client_tgi.py  unsloth_model.py
inference_pipeline/inference_pipeline/wandb/: latest-run
inference_pipeline/inference_pipeline/wandb/run-20240414_150722-mj7upbke/: run-mj7upbke.wandb
inference_pipeline/inference_pipeline/wandb/run-20240414_150722-mj7upbke/files/: config.yaml  requirements.txt  wandb-metadata.json
ingestion_pipeline/: Makefile  pyproject.toml
ingestion_pipeline/scripts/: embed_into_chromadb.py
ingestion_pipeline/src/: logger.py  paths.py  vector_db_api.py
training_pipeline/: Makefile  pyproject.toml
training_pipeline/config/: training_config.yaml
training_pipeline/tools/: run_train.py
training_pipeline/training_pipeline/: config.py  model.py  prompt_formatting.py  static.py
training_pipeline/training_pipeline/api/: train.py
